update- entered letter change to lower case

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -15,6 +15,7 @@ h2{
     font-family: 'Mukta', sans-serif;
 }
 .container{
+    height:100%;
     background-color:#fcf3cf;
     border-radius: 25px;
 }
